adding new functionalities to cart

--- a/src/pages/cart/cart.scss
+++ b/src/pages/cart/cart.scss
@@ -1,3 +1,11 @@
 page-cart {
+    .noLineBreak {
+        float: left;
+        padding: 0px 4px;
+    }
+
+    .cartIconAddCircle {
+        padding-left: 3px;
+    }
 
 }
